Fix overlay container structure and overflow with forms

--- a/src/subtitulamos/resources/assets/css/episode.scss
+++ b/src/subtitulamos/resources/assets/css/episode.scss
@@ -422,7 +422,3 @@
     }
   }
 }
-
-.form-wrap {
-  min-width: 320px;
-}
